--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             purpose of Holiday is to create its own holiday ecosystem and use it
             as a payment tool.
           </p>
-          <p><br />It has 3 different prize system:</p>
+          <p><br />It has 3 different prizes system:</p>
           <ul class="about__list">
             <br />
             <li class="list">Hold to Earn.</li>
@@ -171,6 +171,65 @@
                 you various chances to get prizes while you travel
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Prize -->
+    <section class="prize">
+      <div class="container prize__content">
+        <div class="prize__header">
+          <h1 class="prize__heading">Prizes</h1>
+        </div>
+
+        <div class="prize__container">
+          <div class="prize__text">
+            <h2>There are 3 Steps of Winning Prize</h2>
+
+            <div class="prize__items">
+              <div class="prize__item collapsible">
+                <header class="prize__item__header">
+                  <h3 class="prize__item__heading">Hold to Earn</h3>
+                  <svg class="icon icon--white prize__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                  <p>
+                    We offer amazing prizes to our holders and supporters with
+                    the lotteries.
+                  </p>
+                </div>
+              </div>
+
+              <div class="prize__item collapsible">
+                <header class="prize__item__header">
+                  <h3 class="prize__item__heading">Stake to Earn</h3>
+                  <svg class="icon icon--white prize__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                  You will be eligible to earn amazing Holiday prizes with
+                  profitable staking pools
+                </div>
+              </div>
+
+              <div class="prize__item collapsible">
+                <header class="prize__item__header">
+                  <h3 class="prize__item__heading">Travel to Earn</h3>
+                  <svg class="icon icon--white prize__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                  LIf you use Holiday token in your vacations you will be
+                  eligible to get awsome prizes. It makes Holiday first Travel
+                  to earn project in the world
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
