--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
       crossorigin="anonymous"
     ></script>
     <link rel="shortcut icon" href="./images/logo.webp" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.css"
+      integrity="sha512-E+53kXnJyuZFSz75xSmTfCpUNj3gp9Bd80TeQQMTPJTVWDRHPOpEYczGwWtsZXvaiz27cqvhdH8U+g/NMYua3A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- ​‌‌‍𝗦𝗰𝗿𝗼𝗹𝗹-𝗕𝗮𝗿𝘀​ -->
@@ -114,13 +128,13 @@
       <div class="container rm__content">
         <img class="rm__lg" src="./images/rm-bg.webp" alt="" />
         <img class="rm__sm" src="./images/rm-sm.webp" alt="" />
-        <div class="rm__header">
+        <div class="rm__header" data-aos="fade-up" data-aos-duration="2000">
           <h1 class="rm__heading" data-aos="fade-up" data-aos-duration="2000">
             RoadMap
           </h1>
         </div>
 
-        <div class="rm__container">
+        <div class="rm__container" data-aos="fade-up" data-aos-duration="2000">
           <div class="rm__card" data-aos="fade-up" data-aos-duration="2000">
             <h2 class="card__heading">Phase 1</h2>
             <ul>
@@ -179,11 +193,15 @@
     <!-- Prize -->
     <section class="prize">
       <div class="container prize__content">
-        <div class="prize__header">
+        <div class="prize__header" data-aos="fade-up" data-aos-duration="2000">
           <h1 class="prize__heading">Prizes</h1>
         </div>
 
-        <div class="prize__container">
+        <div
+          class="prize__container"
+          data-aos="fade-up"
+          data-aos-duration="2000"
+        >
           <div class="prize__text">
             <h2>There are 3 Steps of Winning Prize</h2>
 
@@ -224,7 +242,7 @@
                   </svg>
                 </header>
                 <div class="collapsible__content">
-                  LIf you use Holiday token in your vacations you will be
+                  If you use Holiday token in your vacations you will be
                   eligible to get awsome prizes. It makes Holiday first Travel
                   to earn project in the world
                 </div>
@@ -233,7 +251,13 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+        <i class="social fa-brands fa-telegram"></i>
+        <i class="social fa-brands fa-facebook"></i>
+        <i class="social fa-brands fa-twitter"></i>
+      </div>
     </section>
+    <!-- Footer -->
 
     <script src="scripts/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
